# self-host-llm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  flake.nix  llms.txt  pi_burner.sh  pyproject.toml  robots.txt
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  disaster-recovery.md  meta-template.html  openapi.yaml
src/ultrawhale/: __init__.py  cli.py  config.py  curation.py  difficulty.py  dog_feeding.py  generate.py  hf.py  kompress.py  logging.py  orchestrator.py  resources.py  scoring.py  upload.py
tests/: test_curation.py  test_difficulty.py  test_integration.py  test_scoring.py  test_upload.py
